--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "mysql2": "^3.6.5"
