--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "mysql2": "^3.6.5"
+    "mysql2": "^3.6.5",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
