--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=psql 'postgresql://neondb_owner:npg_BsSmLtn32wCd@ep-noisy-frog-aen10vgm-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+DATABASE_URL=postgresql://neondb_owner:npg_BsSmLtn32wCd@ep-noisy-frog-aen10vgm-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
