--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/index.js"
+      "src": "(.*)",
+      "dest": "index.js"
     }
   ]
 }
